--- a/index.html
+++ b/index.html
@@ -3,14 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To Do List</title>
 
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
+    <!--VUE-->
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!--Bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 
 </head>
 <body>
-    
+    <!--Header-->
+    <header>
+        <div class="container text-center py-5">
+            <h1>
+                To-Do List
+            </h1>
+        </div>
+        <div class="container py-5">
+            <h5>Aggiungi il To-do:</h5>
+            <input @keyup.enter="addTodo()" v-model="newTodo" type="text">
+            <button @click="addTodo()">
+                AGGIUNGI
+            </button>
+        </div>
+
+
+    </header>
+    <!--Main-->
+    <main>
+
+    </main>
 
     <script src="js/main.js"></script>
 </body>
