Mi sembrava di aver creato tutto correttamente solo che non e funzionante e non riesco a trovare l'errore HELP ME

--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
                 AGGIUNGI
             </button>
         </div>
-
-
     </header>
     <!--Main-->
     <main>
+        <div class="container">
+            <ul>
+                <li v-for="(todo, index) in todos">
+                    {{ todo }}
+                </li>
+                <button @click="removetodo(index)">X</button>
+            </ul>
+        </div>
 
     </main>
 
